Bug 50652 - [avr] Incorrect data start value for atmega164a
Summary: [avr] Incorrect data start value for atmega164a
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: unknown
: P3 normal
Target Milestone: 4.6.2
Assignee: Not yet assigned to anyone
URL:
Keywords: wrong-code
Depends on:
Blocks:
 
Reported: 2011-10-07 08:28 UTC by Jan Waclawek
Modified: 2011-10-10 08:46 UTC (History)
2 users (show)

See Also:
Host:
Target: avr
Build:
Known to work:
Known to fail: 4.6.1
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Waclawek 2011-10-07 08:28:57 UTC
The data section start address in avr_mcu_types array (in avr-devices.c, since rev 175248 pulled out to avr-mcus.def) for atmega164a is incorrectly set to 0x0060 rather than to 0x0100.

This bug was originally reported in http://www.avrfreaks.net/index.php?name=PNphpBB2&file=viewtopic&t=112577
Comment 1 Georg-Johann Lay 2011-10-10 08:32:26 UTC
Author: gjl
Date: Mon Oct 10 08:32:15 2011
New Revision: 179737

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=179737
Log:
	PR target/50652
	* config/avr/avr-mcus.def (AVR_MCU): Set .data_section_start of
	atmega164a to 0x100.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/avr/avr-mcus.def
Comment 2 Georg-Johann Lay 2011-10-10 08:37:31 UTC
Author: gjl
Date: Mon Oct 10 08:37:22 2011
New Revision: 179738

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=179738
Log:
	PR target/50652
	Backport from Mainline r179737.
	* config/avr/avr-devices.c (avr_mcu_types): Set
	.data_section_start of atmega164a to 0x100.


Modified:
    branches/gcc-4_6-branch/gcc/ChangeLog
    branches/gcc-4_6-branch/gcc/config/avr/avr-devices.c
Comment 3 Georg-Johann Lay 2011-10-10 08:46:16 UTC
Fixed for 4.6.2+