re PR target/50652 ([avr] Incorrect data start value for atmega164a)

PR target/50652
	Backport from Mainline r179737.
	* config/avr/avr-devices.c (avr_mcu_types): Set
	.data_section_start of atmega164a to 0x100.

From-SVN: r179738